Fix info overflow

--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ button {
   flex-direction: column;
   align-items: center;
   padding: 16px;
-  height: 45vh;
+  height: 50vh;
 }
 
 .info-header {
